# Resume

./: .gitignore  About_Me.html  Competence.html  Contact.html  Frameworks.html  Programming_Languages.html  Project.html  README.md  about-me.html  backup.sql  competence.html  contact.html  docker-compose.yml  experience.html  frameworks.html  index.html  package-lock.json  package.json  programming-languages.html  project.html  start.sh  tailwind.config.js  vite.config.js
assets/: index-BXW3auNX.css  index-BXgFCtCC.css  index-Bb91HfNf.js  index-Bf8M8HdF.js  index-BuEjabS5.css  index-CBAonMgG.js  index-CKaLExO8.js  index-Cxl52M3z.js  index-D5WLZfgO.css  index-DhL6kXcO.js  index-Du4472Md.css  index-DuMOQGRm.js  index-DyosoJVJ.js  index-ElG53JIR.js  index-QT5VsCD3.css  index-V4HQyCai.css  index-lEIqdvea.js  index-qazdCMeB.js  index-y93kG0Ln.css
backend/: .env  Cargo.toml  Dockerfile  diesel.toml
backend/src/: config.rs  database.rs  main.rs  schema.rs
backend/src/models/: blog.rs  frameworks.rs  git.rs  mod.rs  personal.rs  programming_languages.rs  projects.rs  roadmaps.rs  skills.rs  tools.rs  user.rs
backend/src/routes/: auth_routes.rs  blog_routes.rs  frameworks_routes.rs  git_routes.rs  mod.rs  personal_routes.rs  programming_languages_routes.rs  projects_routes.rs  roadmaps_routes.rs  skills_routes.rs  tools_routes.rs  user_routes.rs
backend/src/services/: auth_service.rs  mod.rs  user_service.rs
css/: Default.css  Header.css  HomePage.css  Navigation.css  Prog.css  default.css  frameworks.css  homepage.css  navigation.css  programming-language.css  (+1 more)
(+61 files in other folders)
