[package]
name = "my_resume"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "=4.9.0"
sqlx = { version = "0.5", features = ["runtime-async-std-native-tls", "macros", "mysql"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
env_logger = "0.9"

[build-dependencies]
syn = { version = "1.0", features = ["derive", "parsing", "printing", "proc-macro"] }

