[package]
name = "my_resume"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "=4.9.0"
diesel = { version = "2.0.0", features = ["mysql", "r2d2", "chrono", "diesel-derive-enum"] }
diesel-derive-enum = "2.0"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9"
log = "0.4"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
syn = { version = "1.0", features = ["derive", "parsing", "printing", "proc-macro"] }

